# Charon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUtils.cmake  README.md  build_for_publish.ps1  build_for_publish.sh
.github/workflows/: cmake-multi-platform.yml
assets/: config.json
docs/: JsonFormat.md  example_config_default.json  example_config_immediate.json
folder_watcher/: CMakeLists.txt
folder_watcher/processor/: path_resolver.cpp  processor.cpp  processor.h  processor_config.h  processor_config_reader.cpp  processor_config_reader.h
folder_watcher/util/: error.h
folder_watcher/watcher/: directory_watcher.cpp  directory_watcher.h
folder_watcher/watcher/windows/: directory_watcher_windows.cpp  directory_watcher_windows.h
folder_watcher_exe/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/charon/: CMakeLists.txt
source/charon/charon/: charon.cpp  charon.h  charon_main.cpp  charon_main.h  os_handle.h
source/charon/processor/: deferred_file_locker.cpp  deferred_file_locker.h  path_resolver.cpp  path_resolver.h  processor.cpp  processor.h  processor_config.h  processor_config_reader.cpp  processor_config_reader.h  processor_config_validator.cpp  processor_config_validator.h
source/charon/threading/: blocking_queue.h
source/charon/user_interface/: console_user_interface.cpp  console_user_interface.h  daemon_user_interface.h  user_interface.h
source/charon/user_interface/linux/: daemon_user_interface_linux.cpp  daemon_user_interface_linux.h
source/charon/user_interface/windows/: daemon_user_interface_windows.cpp  daemon_user_interface_windows.h  tray_icon.cpp  tray_icon.h  window.cpp  window.h  window_class.h
source/charon/util/: argument_parser.h  blocking_queue.h  class_traits.h  filesystem.h  filesystem_impl.cpp  filesystem_impl.h  logger.cpp  logger.h  notification.cpp  notification.h  string_helper.cpp  string_helper.h  string_literal.h  time.cpp  time.h
source/charon/util/linux/: error.h  filesystem_impl_linux.cpp
source/charon/util/windows/: filesystem_impl_windows.cpp
source/charon/watcher/: directory_watcher.cpp  directory_watcher.h  directory_watcher_factory.h  file_action.h  file_event.h
source/charon/watcher/linux/: CMakeLists.txt  directory_watcher_linux.cpp  directory_watcher_linux.h
source/charon/watcher/windows/: directory_watcher_windows.cpp  directory_watcher_windows.h
source/charon_exe/: CMakeLists.txt  console_main.cpp  daemon_main.cpp  main.cpp  tmp_test_config.json
source/charon_exe/linux/: CMakeLists.txt  main.cpp
source/charon_exe/windows/: CMakeLists.txt  console_main.cpp
source/charon_resources/windows/: CMakeLists.txt  resource.h  resource.rc
tests/: CMakeLists.txt
tests/acceptance_tests/: .gitignore  CMakeLists.txt  config.py  main.py  test_files.py
tests/common/: oakum_gtest_event_listener.h
tests/os_tests/: CMakeLists.txt  charon_tests.cpp  deferred_file_locker_tests.cpp  directory_watcher_tests.cpp  logger_tests.cpp  main.cpp  processor_tests.cpp  skip_macros.h  test_files_helper.h  test_helpers.cpp  test_helpers.h
tests/os_tests/fixtures/: processor_config_fixture.h
tests/processor/: processor_config_reader_tests.cpp
tests/unit_tests/: CMakeLists.txt  main.cpp
tests/unit_tests/fixtures/: processor_config_fixture.h
tests/unit_tests/mocks/: mock_filesystem.h  mock_logger.h  mock_os_handle.h  mock_time.h
tests/unit_tests/processor/: processor_config_reader_tests.cpp  processor_config_validator_tests.cpp  processor_tests.cpp
tests/unit_tests/util/: logger_tests.cpp
