set(TARGET_NAME CharonOsTests)
add_executable(${TARGET_NAME} CMakeLists.txt)
target_common_setup(${TARGET_NAME} Tests)
target_find_sources_and_add(${TARGET_NAME})
target_link_libraries(${TARGET_NAME} PRIVATE CharonLib gtest)
target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
set_target_properties(${TARGET_NAME} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "--gtest_filter=*")
add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
target_compile_definitions(${TARGET_NAME} PRIVATE -DTEST_DIRECTORY_PATH=L"${CMAKE_BINARY_DIR}/test_files")
add_subdirectories()
target_setup_vs_folders(${TARGET_NAME})
